# geoproc

./: .gitignore  CMakeLists.txt  LICENSE  acknowledgments.txt  build.py  make.bat  references.txt  sample_surface.cpp
.github/workflows/: cmake-multi-platform.yml
apps/: build_bvh.cpp  bvh.cpp  bvh_demo.cpp  draw_2d.cpp  off_to_stl.cpp  poke_faces.cpp  sample_surface.cpp  sample_volume.cpp  separate_islands.cpp  shrink_fatten.cpp  smooth_vertices.cpp  subdivide.cpp  vox_to_stl.cpp  vox_to_surface.cpp  win32_window.cpp
libs/: aabb.hpp  bvh.cpp  bvh.hpp  indexed_ngon_mesh.hpp  indexed_tri_edges_mesh.hpp  indexed_tri_mesh.hpp  lib_bvh.cpp  off_io.hpp  ply_io.cpp  ply_io.hpp  read_stl.cpp  read_stl.hpp  stl_io.cpp  stl_io.hpp  triangle.hpp  vec.hpp  vec3.hpp
src/: CMakeLists.txt  read_stl.cpp  read_stl.hpp  sample_surface.cpp
src/libs/: read_stl.cpp
